src/objects/Underwriting__c.object
<CustomObject>
    <fields>
        <fullName>Do_you_own_any_other_businesses__c</fullName>
        <label>Do you own any other businesses?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_plan_to_sell_the_business_soon__c</fullName>
        <label>Do you plan to sell the business soon?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_Merchant_Own_The_Business_Location__c</fullName>
        <formula>text( Opportunity__r.Does_Merchant_Own_The_Business_Location__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does Merchant Own The Business Location?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_the_Merchant_Own_Their_Home__c</fullName>
        <label>Does the Merchant Own Their Home?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Photo_ID__c</fullName>
        <formula>text( Opportunity__r.Eligible_Photo_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible Photo ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Rapid_Funding__c</fullName>
        <label>Eligible for Rapid Funding?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once Funding Condition is met</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equity_In_Home__c</fullName>
        <formula>OF_What_is_the_value_of_their_home__c - OF_What_is_their_home_mortgage_balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equity In Home:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Days_to_Repay__c</fullName>
        <label>Est. Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exceptions__c</fullName>
        <label>Exceptions:</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$15001 Min Advance Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 1 year owned business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;2500 min cc volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;2500 Minimum Advance Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;3500 min cc volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;5000 Minimum Advance Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baker Hill score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK Filing/Discharge &lt;1yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not meet batching requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollar Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceed maximum split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds maximum term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FICO score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Low Batching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease &lt; 1 year remaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan w/Special Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Batching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing 1 month bank statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing 2 months bank statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Landlord Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Tax Repayment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage 60 DPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage 90 DPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Modification</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Existing_Competitor_Advance__c</fullName>
        <formula>text( Opportunity__r.Existing_Competitor_Advance2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Competitor Advance?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Daily_Repay__c</fullName>
        <label>Expected Daily Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRSA_legal_name_same_as_in_Salesforce__c</fullName>
        <formula>text( Opportunity__r.FRSA_legal_name_same_as_in_Salesforce__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FRSA legal name same as in Salesforce?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_had_a_cash_advance_before__c</fullName>
        <label>Have you had a cash advance before?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_started_eviction_proceedings__c</fullName>
        <label>Have you started eviction proceedings?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_value_confirmed_through__c</fullName>
        <label>Home value confirmed through:</label>
        <picklist>
            <picklistValues>
                <fullName>Zillow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trulia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Result Found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Long_has_Owner_Leased_Property__c</fullName>
        <label>How Long has Owner Leased Property?</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_have_you_used_current_processor__c</fullName>
        <label>How long have you used current processor</label>
        <picklist>
            <picklistValues>
                <fullName>0 to 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_locations_for_this_business__c</fullName>
        <label>How many locations for this advance?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_sqft_does_the_merchant_occupy__c</fullName>
        <label>How many sqft does the merchant occupy?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_square_feet_is_the_business__c</fullName>
        <label>How many square feet is the business?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_is_the_rent_for_the_business__c</fullName>
        <label>How much is the rent for the business?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_much_of_the_business_do_you_own__c</fullName>
        <label>How much of the business do you own?</label>
        <picklist>
            <picklistValues>
                <fullName>30% to 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51% to 99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_closing_in_the_next_year_what_period__c</fullName>
        <label>If closing in the next year what period?</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_no_please_explain_principal_westlaw__c</fullName>
        <label>If no, please explain</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_other_then_what__c</fullName>
        <label>If other, then what?</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_are_you_current_on_franchise_dues__c</fullName>
        <label>If so are you current on franchise dues?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_so_for_how_much__c</fullName>
        <label>If so, for how much?</label>
        <picklist>
            <picklistValues>
                <fullName>$100 to $500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$501 to $1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,001 to $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,001 to $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $10,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_so_then_what_type__c</fullName>
        <label>If so, then what type?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_with_which_Cash_Advance_Company__c</fullName>
        <label>If so, with which Cash Advance Company?</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_months__c</fullName>
        <label>If yes, how many months?</label>
        <picklist>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Months +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Payment Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Bankruptcies_Additional_Notes__c</fullName>
        <formula>Opportunity__r.Individual_Bankruptcies_Additional_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Bankruptcies Additional Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Bankruptcies__c</fullName>
        <formula>text( Opportunity__r.Individual_Bankruptcies__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Bankruptcies:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_File_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial File Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_File_Review__c</fullName>
        <label>Initial File Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Review_Turn_Days__c</fullName>
        <formula>if

( isnull (Initial_File_Review__c ) ,NULL ,

if

((Initial_File_Review__c - UW_Assigned_Date_Stamp__c)&gt;3,

(Initial_File_Review__c - UW_Assigned_Date_Stamp__c)-2,

Initial_File_Review__c - UW_Assigned_Date_Stamp__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Review Turn Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_underwriting_notes__c</fullName>
        <label>Internal underwriting notes:</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_this_a_triple_net_lease__c</fullName>
        <label>Is this a triple net lease?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_business_a_franchise__c</fullName>
        <label>Is this business a franchise?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_this_business_type_considered_luxury__c</fullName>
        <formula>Opportunity__r.BA_Is_the_business_type_considered_Luxur__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is this business type considered luxury?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Judgements_Open__c</fullName>
        <formula>TEXT( Opportunity__r.Judgements_Open__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Judgements Open:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_When_does_your_lease_expire__c</fullName>
        <label>When does your lease expire?</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 yrs+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landlord_Address__c</fullName>
        <label>Landlord Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Landlord_Contact_Name__c</fullName>
        <label>Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Phone_Number__c</fullName>
        <label>Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Late_w_Vendors_Details__c</fullName>
        <label>Late w/ Vendors Details:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>if(isblank(text( Opportunity__r.New_Lead_Source__c )),text( Opportunity__r.LeadSource ),text( Opportunity__r.New_Lead_Source__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Notes__c</fullName>
        <label>Location 2 Landlord Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Notes__c</fullName>
        <label>Location 3 Landlord Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_4_Landlord_Notes__c</fullName>
        <label>Location 4 Landlord Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MEB_1__c</fullName>
        <formula>Opportunity__r.MEB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MEB 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEB_2__c</fullName>
        <formula>Opportunity__r.MEB_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MEB 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEB_3__c</fullName>
        <formula>Opportunity__r.MEB_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MEB 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MI_When_does_your_lease_expire__c</fullName>
        <label>When does your lease expire?</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 yrs+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merchant_Interview_Completed_Date__c</fullName>
        <label>Merchant Interview Completed Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Month_1__c</fullName>
        <formula>text( Opportunity__r.Month__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_2__c</fullName>
        <formula>text( Opportunity__r.Month_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_3__c</fullName>
        <formula>text( Opportunity__r.Month_3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Average_Balance_1__c</fullName>
        <formula>Opportunity__r.Month_Average_Balance_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Average Balance 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Average_Balance_2__c</fullName>
        <formula>Opportunity__r.Month_Average_Balance_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Average Balance 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Average_Balance_3__c</fullName>
        <formula>Opportunity__r.Monthly_Average_Balance_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Average Balance 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Cashflow_1__c</fullName>
        <formula>Opportunity__r.Monthly_Cashflow_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Cashflow 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Cashflow_2__c</fullName>
        <formula>Opportunity__r.Monthly_Cashflow_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Cashflow 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Cashflow_3__c</fullName>
        <formula>Opportunity__r.Monthly_Cashflow_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Cashflow 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Debits_1__c</fullName>
        <formula>Opportunity__r.Monthly_Gross_Debits_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Debits 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Debits_2__c</fullName>
        <formula>Opportunity__r.Monthly_Gross_Debits_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Debits 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Debits_3__c</fullName>
        <formula>Opportunity__r.Monthly_Gross_Debits_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Debits 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Deposit_1__c</fullName>
        <formula>Opportunity__r.Month_Average_Gross_Sale_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Deposit 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Deposit_2__c</fullName>
        <formula>Opportunity__r.Month_Average_Gross_Sales_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Deposit 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Deposit_3__c</fullName>
        <formula>Opportunity__r.Monthly_Gross_Deposit_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Gross Deposit 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_delinquent__c</fullName>
        <formula>text(Opportunity__r.Mortgage_Delinquent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Delinquent:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAMAA_TAG__c</fullName>
        <formula>text(Opportunity__r.NAMAA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAMAA TAG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSF_1__c</fullName>
        <formula>Opportunity__r.NSF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of NSF 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSF_2__c</fullName>
        <formula>Opportunity__r.NSF_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of NSF 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Terminal_Type_Currently_Used__c</fullName>
        <label>Name of Terminal Type Currently Used?</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_s_of_additional_signor_s__c</fullName>
        <label>Name(s) of additional signor(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Advance_Price__c</fullName>
        <label>New Advance Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Payback_Price__c</fullName>
        <label>New Amount Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Percent_Payback__c</fullName>
        <label>New Daily Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Processor__c</fullName>
        <formula>text( Opportunity__r.Processor_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Processor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>How many full time employees do you have</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 to 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_NSF_3__c</fullName>
        <formula>Opportunity__r.Number_of_NSF_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of NSF 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_NSF_4__c</fullName>
        <formula>Opportunity__r.Number_of_NSF_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of NSF 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Part_Time_Employees__c</fullName>
        <label>How many part time employees do you have</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 to 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OF_Does_the_Merchant_Own_Their_Home__c</fullName>
        <formula>text(Opportunity__r.Does_the_Merchant__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Does the Merchant Own Their Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Home_value_confirmed_through__c</fullName>
        <formula>text(Opportunity__r.Home_value_confirmed_through__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home value confirmed through:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_What_is_the_value_of_their_home__c</fullName>
        <formula>Opportunity__r.What_is_the_value_of_their_home__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>What is the value of their home?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OF_What_is_their_home_mortgage_balance__c</fullName>
        <formula>Opportunity__r.What_is_their_home_mortgage_balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>What is their home mortgage balance?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OppIDD__c</fullName>
        <caseSensitive>true</caseSensitive>
        <defaultValue>&apos;DO NOT CHANGE!&apos;</defaultValue>
        <label>OppIDD</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Underwriting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Underwriting</relationshipLabel>
        <relationshipName>Underwriting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_UCC_Filings__c</fullName>
        <formula>text( Opportunity__r.Other_UCC_Filings__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other UCC Filings:</label>
        <type>Text</type>
    </fields>
</CustomObject>